<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"   
    android:background="#E5E4E2" 
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="442dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
   
    <LinearLayout 
        android:id="@+id/linear1"
         android:layout_width="match_parent" 
        android:layout_height="fill_parent" 
        android:orientation="vertical"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp">
    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_shape"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dip"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_shape" 
        android:layout_marginBottom="10dip"/>
</LinearLayout>

    <Button
        android:id="@+id/SignIn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:fontFamily="@string/abc_searchview_description_submit"
        android:gravity="center"
        android:text="@string/singin"
        android:textColor="#FFFFFF"
        android:onClick="click" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        
        android:layout_alignRight="@+id/SignIn"
        android:text="@string/hello_world" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        
        android:src="@drawable/login" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:text="@string/login" />

    
    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SignIn"
        android:layout_centerHorizontal="true"
        android:text="@string/keep_me_logged_in" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:clickable="true"
        android:onClick="click"
        android:text="@string/signup"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/activity_horizontal_margin" 
        android:layout_marginTop="20dp"
        android:layout_below="@+id/horizontalLine"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="click"
        android:text="@string/forgotpassword"
        android:drawableTop="@drawable/textview_selector"
         />
     <View
             android:id="@+id/horizontalLine"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="#F87217"
             android:layout_below="@+id/textView3"
             android:layout_marginTop="10dp"/>

    </RelativeLayout>
    </ScrollView>
