<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

<LinearLayout
      
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fname"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_shape"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp" >

        <requestFocus />
    </EditText>
    
     <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" 
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
       />

    <EditText
        android:id="@+id/inputemail"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_shape"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp" />
    
    
        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/password"
            />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" 
        android:background="@drawable/edit_text_shape"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>
            <TextView
            android:id="@+id/text_re_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:layout_marginLeft="16dp"
            android:text="@string/repasswd"
            
        	 />

    <EditText
        android:id="@+id/re_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:ems="10"
        android:hint="@string/repasswd"
        android:inputType="textPassword" 
        android:background="@drawable/edit_text_shape"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>
         <TextView
            android:id="@+id/text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:layout_marginLeft="16dp"
            android:text="@string/address"
            
        	 />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:background="@drawable/edit_text_shape"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp" />
    
    <TextView
            android:id="@+id/text_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           
            android:layout_marginLeft="16dp"
            android:text="@string/phone"
            
        	 />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone" 
        android:background="@drawable/edit_text_shape"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:textColor="#FFFFFF" />

   

    
    </LinearLayout>
    </ScrollView>